src/widgets/snapshots/rstv__widgets__indicator__tests__snapshot_normal.snap
---
source: src/widgets/indicator.rs
expression: screen.snapshot()
---
size: 16x1
cursor: hidden
text:
|══════ 3:5 ═════|
attr:
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,0,170)
